--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G \
 kotlin.code.style=official
 # Meta
 branch=main
-license_type=cc0
+license_type=mit
 license_header=Copyright (c) $YEAR $DEVELOPER under the $LICENSE license
 # Lang
 java_version=17
@@ -27,13 +27,13 @@ loader_version=0.12.12
 loom_version=0.10-SNAPSHOT
 # Mod Properties
 mod_version=1.0.0
-mod_name=ExampleMod
-mod_author=Example
-mod_desc=An example mod
-maven_group=com.example
-archives_base_name=examplemod
-mod_site=https://github.com/Example/ExampleMod
-mod_src=https://github.com/Example/ExampleMod
+mod_name=Restock
+mod_author=DeflatedPickle
+mod_desc=Refills active stacks from other stacks in your inventory
+maven_group=com.deflatedpickle
+archives_base_name=restock
+mod_site=https://github.com/DeflatedPickle/Restock
+mod_src=https://github.com/DeflatedPickle/Restock
 # Api Mods
 fabric_version=0.44.0
 fabric_kotlin_version=1.7.0
